fix: переделать импорт презентаций инкрементально
